fixed overflow

--- a/src/components/VoterList/VoterList.css
+++ b/src/components/VoterList/VoterList.css
@@ -23,9 +23,10 @@
   justify-content: center;
   width: 100%;
   white-space: nowrap;
-  overflow: hidden;
+  overflow: auto;
   border: 1px solid rgb(129, 129, 129);
   text-align: center;
+  padding: 0 1rem;
 }
 
 .container-voter-item th{
